@@ -75,7 +75,7 @@
           <em> Date:</em>
         </TD>
         <TD VALIGN="top">
-          [::xotcl::rcs date {$Date: 2004/08/22 10:00:19 $}]
+          [::xotcl::rcs date {$Date: 2004/08/22 10:20:56 $}]
         </TD>
       </TR>
     </TABLE>
