@@ -1,7 +1,9 @@
 2004-08-22 Gustaf.Neumann@wu-wien.ac.at
         * fixed nonposargs, when used with checker procs and spaces in arguments
         * auto-generating docs in build tree (instead in source tree)
-        * fixed somewhat confusing declations in xotcl.h (XOTcl_Object and XOTclObject)
+        * cleanup of somewhat confusing declations in xotcl.h 
+          (XOTcl_Object and XOTclObject)
+        * made a shell script config/mktar.sh for generating dist-cleaned tar files
 
 2004-08-19 Gustaf.Neumann@wu-wien.ac.at
         * if configure is run outside the src tree the directory
